Almost finished with assignment 04

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,5 +28,7 @@
 
     <dimen name="card_corner_radius">4dp</dimen>
     <dimen name="card_elevation">4dp</dimen>
+    <dimen name="icon_sizes">40dp</dimen>
+
 
 </resources>
