--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,8 +8,16 @@
     </style>
 
     <style name="Button.Blue.Borderless" parent="@style/Widget.AppCompat.Button.Borderless.Colored">
-        <item name="android:textColor">@android:color/white</item>
         <item name="colorButtonNormal">@color/blue_400</item>
+        <item name="android:paddingLeft">0dp</item>
+        <item name="android:paddingRight">0dp</item>
+        <item name="android:layout_width">@dimen/actionBarSize</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/grey_40</item>
+        <item name="android:textSize">12sp</item>
+        <item name="iconPadding">6dp</item>
+
     </style>
 
     <style name="Button.Blue" parent="Widget.Material3.Button">
@@ -28,6 +36,11 @@
     <style name="Button.Blue.Group" parent="@style/Widget.MaterialComponents.Button.OutlinedButton">
         <item name="android:textColor">@color/btn_group_txt</item>
         <item name="backgroundTint">@color/btn_group_bg</item>
+    </style>
+
+    <style name="Button.White.Group" parent="@style/Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="android:textColor">@color/btn_group_bg</item>
+        <item name="backgroundTint">@color/btn_group_txt</item>
     </style>
 
     <style name="CardView.White" parent="Widget.MaterialComponents.CardView">
